--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ commands:
             - modules/fantasy-functions/node_modules
             - modules/identity/node_modules
             - modules/lens/node_modules
+            - modules/rollup-plugin-curry/node_modules
             - modules/transduce/node_modules
             - modules/yafu/node_modules
             #pathsend
