--- a/modules/eslint-config-yafu/package.json
+++ b/modules/eslint-config-yafu/package.json
@@ -8,9 +8,12 @@
     "test": "eslint *.js"
   },
   "dependencies": {
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.4",
+    "typescript": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
