feat(rollup-plugin-curry): add functions to curry typescript definitions
Imported from prototype project. This also adds tests to the rollup
plugin.

--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -4,19 +4,26 @@
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "main": "dist/plugin.js",
+  "type": "module",
   "scripts": {
     "clean": "rm -rf dist/",
     "lint": "eslint lib/ samplecode/",
-    "test": "yarn lint",
+    "test": "yarn lint && yarn unit",
+    "unit": "mocha",
     "transpile": "rollup -c",
     "prepublishOnly": "yarn clean && yarn transpile"
   },
   "devDependencies": {
+    "chai": "^4.3.3",
     "eslint": "^8.3.0",
+    "mocha": "^9.1.3",
     "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.2.2"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "ramda": "^0.27.1"
   }
 }
