--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -14,6 +14,7 @@
     "prepublishOnly": "yarn clean && yarn transpile"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "chai": "^4.3.3",
     "eslint": "^8.3.0",
     "mocha": "^9.1.3",
@@ -24,6 +25,10 @@
     "access": "public"
   },
   "dependencies": {
-    "ramda": "^0.27.1"
+    "@babel/traverse": "^7.13.13",
+    "@babel/types": "^7.13.13",
+    "estree-walker": "^3.0.0",
+    "ramda": "^0.27.1",
+    "recast": "^0.20.4"
   }
 }
