--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -33,17 +33,20 @@
     "@yafu/curry": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/register": "^7.13.8",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.14",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "babel-plugin-add-module-exports": "^1.0.4",
     "camel-case": "^4.1.1",
-    "chai": "^4.3.0",
+    "chai": "^4.3.4",
     "jsdoc": "^3.6.4",
-    "mocha": "^8.3.0",
-    "rollup": "^2.40.0",
+    "mocha": "^8.3.2",
+    "rollup": "^2.44.0",
     "rollup-plugin-terser": "^7.0.2",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "yaml": "^1.10.2"
   },
   "publishConfig": {
     "access": "public"
