feat: add proper export properties to package.json files
These properties are supported by newer versions of node and will allow
both import statements and require.

--- a/modules/const/package.json
+++ b/modules/const/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "main": "dist/const.js",
-  "module": "const.js",
+  "exports": {
+    "import": "./const.js",
+    "require": "./dist/const.js"
+  },
+  "type": "module",
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "eslint *.js",
