feat: transition to esm
All scripts are now in esm format.  This forced the removal of the yafu
acceptance tests that tested that the bundles worked as expected. They
should not be needed anymore however since we now use modern bundling
tools that is expected to keep the same functionality as the original
code.

Transpiling has been removed from tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ commands:
   install:
     parameters:
       node-version:
-        default: '12'
+        default: '14'
         type: string
     steps:
       - run:
@@ -75,4 +75,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '10', '12', '14' ]
+              node-version: [ '12', '14' ]
