--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yafu",
+  "name": "yafu-mono",
   "private": true,
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
@@ -16,8 +16,8 @@
     "watch": "lerna run --parallel transpile -- -w"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/cli": "^13.2.0",
+    "@commitlint/config-conventional": "^13.2.0",
     "@yafu/eslint-config-yafu": "^1.0.2",
     "array-equal": "^1.0.0",
     "lerna": "^4.0.0",
