chore: add node version 16 to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,4 +75,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '12', '14' ]
+              node-version: [ '12', '14', '16' ]
