--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -3,12 +3,24 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
+  "type": "module",
+  "exports": {
+    "import": "./index.js",
+    "require": "./dist/transduce.cjs"
+  },
   "main": "dist/cjs/transduce.js",
   "module": "index.js",
   "scripts": {
+    "clean": "rm -rf dist",
+    "lint": "eslint lib test *.js",
+    "prepublishOnly": "yarn clean && yarn transpile",
     "pretest": "yarn",
     "test": "yarn unit",
-    "unit": "mocha"
+    "transpile": "rollup -c",
+    "unit": "mocha --esm"
+  },
+  "dependencies": {
+    "yafu": "^1.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
@@ -17,8 +29,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "yafu": "^1.0.4"
   }
 }
