chore: transpile in sequence but test in parallel
When testing the full repository, transpiling is now done in sequence so
that packages with dependencies on them are transpiled first. Tests are
independent however and can run in parallel.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "lerna run lint --parallel",
     "prepublishOnly": "yarn clean && yarn test",
     "pretest": "yarn && yarn transpile",
-    "test": "lerna run test",
-    "transpile": "lerna run transpile --parallel",
+    "test": "lerna run test --parallel",
+    "transpile": "lerna run transpile",
     "watch": "lerna run --parallel transpile -- -w"
   },
   "devDependencies": {
