--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -5,8 +5,14 @@
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "type": "module",
   "exports": {
-    "import": "./index.js",
-    "require": "./dist/transduce.cjs"
+    ".": {
+      "import": "./index.js",
+      "require": "./dist/cjs/transduce.cjs"
+    },
+    "./polyfills/*": {
+      "import": "./lib/polyfills/*.js",
+      "require": "./dist/cjs/polyfills/*.cjs"
+    }
   },
   "main": "dist/cjs/transduce.js",
   "module": "index.js",
@@ -25,7 +31,8 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@yafu/eslint-config-yafu": "^1.0.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "glob": "^7.2.0"
   },
   "publishConfig": {
     "access": "public"
