--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -26,6 +26,7 @@
     "unit": "mocha --esm"
   },
   "dependencies": {
+    "@yafu/curry": "^1.1.1",
     "yafu": "^1.3.0"
   },
   "devDependencies": {
