chore: no longer support node 12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,4 +84,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '12', '14', '16' ]
+              node-version: [ '14', '16' ]
