feat(type-utils): add type-utils
A package that contains common base types usable in all projects.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ commands:
             - modules/rollup-plugin-curry/node_modules
             - modules/sort-dependencies/node_modules
             - modules/transduce/node_modules
+            - modules/type-utils/node_modules
             - modules/yafu/node_modules
             #pathsend
   run-tests:
