chore: do not test on node 16
The experimental loaders for runnint tests in typescript are not
compatible. Therefore staying on node 14 for now.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,4 +89,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '14', '16' ]
+              node-version: [ '14' ]
