--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@yafu/lens",
-  "version": "1.1.2",
+  "version": "1.0.4",
   "description": "Lenses to brighten up your functional programming",
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
-  "main": "./dist/lens.cjs",
+  "main": "./dist/cjs/index.js",
   "exports": {
-    "import": "./index.js",
-    "require": "./dist/lens.cjs"
+    "import": "./dist/es6/index.js",
+    "require": "./dist/cjs/index.js"
   },
   "type": "module",
   "scripts": {
@@ -19,23 +19,23 @@
     "unit": "mocha"
   },
   "dependencies": {
-    "@yafu/const": "^1.1.1",
-    "@yafu/curry": "^1.1.1",
-    "@yafu/fantasy-functions": "^1.1.2",
-    "@yafu/identity": "^1.1.1",
-    "yafu": "^1.3.0"
+    "@yafu/const": "^1.0.4",
+    "@yafu/fantasy-functions": "^1.0.4",
+    "@yafu/fantasy-types": "^0.0.0",
+    "@yafu/identity": "^1.0.4",
+    "yafu": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/register": "^7.16.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.14",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "chai": "^4.3.4",
-    "mocha": "^9.1.3",
+    "mocha": "^8.3.2",
     "rollup-plugin-replace": "^2.2.0"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "7281dfbb47ac1d4ee618ae2176dace369b4496f9"
+  "gitHead": "76609e54a0d57b9a161b69afb45b4eb89869a074"
 }
