--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -3,11 +3,12 @@
   "version": "1.1.2",
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
-  "main": "./dist/cjs/fantasy-functions-development.cjs",
   "exports": {
-    "import": "./dist/es6/fantasy-functions.js",
+    "import": "./dist/es/fantasy-functions.js",
     "require": "./dist/cjs/fantasy-functions-development.cjs"
   },
+  "main": "./dist/cjs/fantasy-functions-development.cjs",
+  "types": "./dist/ts/fantasy-functions.d.ts",
   "type": "module",
   "files": [
     "lib",
@@ -18,13 +19,18 @@
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "eslint lib test *.js",
-    "prepublishOnly": "yarn clean && yarn transpile",
+    "prepublishOnly": "yarn clean && yarn transpile && yarn test",
     "test": "yarn lint && yarn unit",
-    "transpile": "node scripts/generate-module.js && rollup -c",
+    "generateEs": "node scripts/generate-module.js",
+    "generateTs": "node --loader ts-node/esm scripts/new-ts.ts > dist/ts/fantasy-functions.ts",
+    "generate": "yarn generateEs & yarn generateTs",
+    "transpile": "yarn tsgen && rollup -c",
+    "tsgen": "mkdir -p dist/ts && yarn generate > dist/ts/fantasy-functions.ts",
     "unit": "mocha"
   },
   "dependencies": {
     "@yafu/curry": "^1.1.1",
+    "@yafu/fantasy-types": "^0.0.0",
     "fantasy-land": "^5.0.0",
     "yafu": "^1.3.0"
   },
@@ -34,12 +40,14 @@
     "@babel/register": "^7.16.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@yafu/eslint-config-yafu": "^1.0.6",
+    "@yafu/rollup-plugin-curry": "^0.0.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "mocha": "^9.1.3",
     "rollup": "^2.60.2",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-ts": "^2.0.5"
   },
   "publishConfig": {
     "access": "public"
