--- a/modules/identity/package.json
+++ b/modules/identity/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@yafu/create-rollup-config": "^0.0.0",
     "eslint": "^8.3.0",
     "rollup": "^2.60.2"
   },
