--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -26,6 +26,7 @@
     "yafu": "^1.1.1"
   },
   "devDependencies": {
+    "@yafu/create-rollup-config": "^0.0.0",
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/register": "^7.13.14",
