--- a/modules/type-utils/package.json
+++ b/modules/type-utils/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
   "main": "./index",
+  "exports": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
     "typecheck": "tsc --noEmit",
