--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@yafu/const": "^1.1.3",
+    "@yafu/either": "^1.0.2",
     "@yafu/fantasy-functions": "^2.0.2",
     "@yafu/fantasy-types": "^1.0.2",
     "@yafu/identity": "^2.0.2",
