Revert "chore: do not test on node 16"
This reverts commit b069247e6a04512f14a5eca3be8cd1fac7d89c27.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,4 +106,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              node-version: [ '14' ]
+              node-version: [ '14', '16' ]
