--- a/modules/const/package.json
+++ b/modules/const/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/const.cjs",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint *.js",
+    "lint": "lint-yafu *.js",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint",
     "transpile": "rollup -c"
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "eslint": "^8.13.0",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "rollup": "^2.70.1"
   },
   "publishConfig": {
