--- a/modules/either/package.json
+++ b/modules/either/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/cjs/either.cjs",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint lib/*.ts test/*.ts",
+    "lint": "lint-yafu lib/*.ts test/*.ts",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint",
     "transpile": "rollup -c",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@yafu/create-rollup-config": "^1.0.4",
-    "eslint": "^8.13.0",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "rollup": "^2.70.1",
     "typescript": "^4.6.3"
   },
