--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -21,7 +21,7 @@
     "generate": "yarn generateEs & yarn generateTs",
     "generateEs": "node scripts/generate-module.js",
     "generateTs": "node --loader ts-node/esm scripts/new-ts.ts > dist/ts/fantasy-functions.ts",
-    "lint": "eslint lib test *.js",
+    "lint": "lint-yafu lib test *.js",
     "prepublishOnly": "yarn clean && yarn transpile && yarn test",
     "test": "yarn lint && yarn unit",
     "transpile": "yarn tsgen && rollup -c",
@@ -43,7 +43,6 @@
     "@yafu/rollup-plugin-curry": "^1.0.3",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.6",
-    "eslint": "^8.13.0",
     "mocha": "^9.2.2",
     "rollup": "^2.70.1",
     "rollup-plugin-replace": "^2.2.0",
