--- a/modules/identity/package.json
+++ b/modules/identity/package.json
@@ -11,7 +11,7 @@
   "main": "./dist/cjs/identity.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint *.js",
+    "lint": "lint-yafu *.js",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint",
     "transpile": "rollup -c"
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@yafu/create-rollup-config": "^1.0.4",
-    "eslint": "^8.13.0",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "rollup": "^2.70.1"
   },
   "publishConfig": {
