--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/cjs/index.cjs",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint lib test *.js",
+    "lint": "lint-yafu lib test *.js",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint && yarn unit",
     "transpile": "rollup -c",
@@ -32,6 +32,7 @@
     "@babel/register": "^7.17.7",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@yafu/create-rollup-config": "^1.0.4",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "rollup-plugin-replace": "^2.2.0"
