--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "clean": "rm -rf dist/",
-    "lint": "eslint lib/ samplecode/",
+    "lint": "lint-yafu lib/ samplecode/",
     "prepublishOnly": "yarn clean && yarn transpile",
     "test": "yarn lint && yarn unit",
     "transpile": "rollup -c",
@@ -32,8 +32,8 @@
     "@types/babel__core": "^7.1.19",
     "@types/babel__traverse": "^7.14.2",
     "@types/ramda": "^0.28.8",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "chai": "^4.3.6",
-    "eslint": "^8.13.0",
     "mocha": "^9.2.2",
     "rollup-plugin-ts": "^2.0.4",
     "typescript": "^4.6.3"
