--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -18,7 +18,7 @@
   "module": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint lib test *.js",
+    "lint": "lint-yafu lib test *.js",
     "prepublishOnly": "yarn clean && yarn transpile",
     "pretest": "yarn",
     "test": "yarn unit",
