--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -27,7 +27,7 @@
     "acceptance": "mocha testrunners/acceptance",
     "clean": "rm -rf dist",
     "jsdoc": "jsdoc -c jsdoc.json lib",
-    "lint": "eslint lib test",
+    "lint": "lint-yafu lib test",
     "prepublishOnly": "yarn clean && yarn run transpile",
     "pretest": "node build/create-test-index",
     "test": "yarn transpile && yarn unit && yarn acceptance",
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@yafu/eslint-config-yafu": "^1.1.2",
     "@yafu/rollup-plugin-curry": "^1.0.3",
     "babel-plugin-add-module-exports": "^1.0.4",
     "camel-case": "^4.1.1",
