--- a/modules/type-utils/package.json
+++ b/modules/type-utils/package.json
@@ -8,7 +8,7 @@
   "main": "./index",
   "types": "./index.d.ts",
   "scripts": {
-    "test": "yarn typecheck",
+    "test": "pnpm typecheck",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
