--- a/modules/either/package.json
+++ b/modules/either/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "lint-yafu lib/*.ts test/*.ts",
-    "prepublishOnly": "yarn clean && yarn transpile",
-    "test": "yarn lint && yarn unit",
+    "prepublishOnly": "pnpm clean && pnpm transpile",
+    "test": "pnpm lint && pnpm unit",
     "transpile": "rollup -c",
     "unit": "mocha"
   },
