--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "clean": "rm -rf dist/",
     "lint": "lint-yafu lib/ samplecode/",
-    "prepublishOnly": "yarn clean && yarn transpile",
-    "test": "yarn lint && yarn unit",
+    "prepublishOnly": "pnpm clean && pnpm transpile",
+    "test": "pnpm lint && pnpm unit",
     "transpile": "rollup -c",
     "unit": "mocha"
   },
