--- a/modules/create-rollup-config/package.json
+++ b/modules/create-rollup-config/package.json
@@ -7,6 +7,8 @@
   "main": "./create-rollup-config.js",
   "dependencies": {
     "@yafu/rollup-plugin-curry": "^1.0.3",
-    "rollup-plugin-ts": "^2.0.5"
+    "rollup": "^2.76.0",
+    "rollup-plugin-ts": "^2.0.5",
+    "typescript": "^4.6.3"
   }
 }
