--- a/modules/curry/package.json
+++ b/modules/curry/package.json
@@ -20,8 +20,13 @@
     "unit": "mocha"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "@yafu/eslint-config-yafu": "^1.1.2",
-    "chai": "^4.3.6"
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2",
+    "rollup": "^2.70.1",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.6.3"
   },
   "publishConfig": {
     "access": "public"
