--- a/modules/either/package.json
+++ b/modules/either/package.json
@@ -14,20 +14,28 @@
     "clean": "rm -rf dist",
     "lint": "lint-yafu lib/*.ts test/*.ts",
     "prepublishOnly": "yarn clean && yarn transpile",
-    "test": "yarn lint",
+    "test": "yarn lint && yarn unit",
     "transpile": "rollup -c",
     "unit": "mocha"
   },
   "dependencies": {
+    "@yafu/curry": "^1.2.3",
     "@yafu/fantasy-functions": "^2.0.4",
     "@yafu/fantasy-types": "^1.0.4",
+    "@yafu/type-utils": "^1.0.3",
     "fantasy-land": "^5.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^18.0.3",
     "@yafu/create-rollup-config": "^1.0.4",
     "@yafu/eslint-config-yafu": "^1.1.2",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2",
     "rollup": "^2.70.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.6.3"
   },
   "publishConfig": {
