--- a/modules/lens/package.json
+++ b/modules/lens/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@yafu/const": "^1.1.4",
+    "@yafu/curry": "^1.2.3",
     "@yafu/either": "^1.0.4",
     "@yafu/fantasy-functions": "^2.0.4",
     "@yafu/fantasy-types": "^1.0.4",
@@ -31,11 +32,17 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^18.0.3",
     "@yafu/create-rollup-config": "^1.0.4",
     "@yafu/eslint-config-yafu": "^1.1.2",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup": "^2.76.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.6.3"
   },
   "publishConfig": {
     "access": "public"
