--- a/modules/rollup-plugin-curry/package.json
+++ b/modules/rollup-plugin-curry/package.json
@@ -31,12 +31,18 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/babel__core": "^7.1.19",
     "@types/babel__traverse": "^7.14.2",
+    "@types/node": "^18.0.3",
     "@types/ramda": "^0.28.8",
     "@yafu/eslint-config-yafu": "^1.1.2",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
-    "rollup-plugin-ts": "^2.0.4",
+    "rollup": "^2.70.1",
+    "rollup-plugin-ts": "^2.0.7",
+    "ts-node": "^10.8.2",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "@yafu/curry": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
