--- a/modules/transduce/package.json
+++ b/modules/transduce/package.json
@@ -31,9 +31,14 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/node": "^18.0.3",
     "@yafu/eslint-config-yafu": "^1.1.2",
     "chai": "^4.3.6",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "mocha": "^9.2.2",
+    "rollup": "^2.76.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.6.3"
   },
   "publishConfig": {
     "access": "public"
