--- a/modules/yafu/package.json
+++ b/modules/yafu/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/node": "^18.0.3",
     "@yafu/eslint-config-yafu": "^1.1.2",
     "@yafu/rollup-plugin-curry": "^1.0.3",
     "babel-plugin-add-module-exports": "^1.0.4",
@@ -52,10 +53,13 @@
     "glob": "^7.1.6",
     "jsdoc": "^3.6.10",
     "mocha": "^9.2.2",
-    "rollup": "^2.70.1",
+    "rollup": "^2.76.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^3.0.2",
     "sort-dependencies": "^1.0.3",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.6.3",
     "yaml": "^2.0.0"
   },
   "publishConfig": {
