--- a/modules/fantasy-functions/package.json
+++ b/modules/fantasy-functions/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/register": "^7.18.9",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^18.6.3",
     "@yafu/eslint-config-yafu": "^1.1.2",
     "@yafu/rollup-plugin-curry": "^1.0.3",
@@ -47,7 +48,6 @@
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "rollup": "^2.77.2",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-ts": "^2.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
